feat: Implement atomicLevel runtime behavior by introducing new step strategies and job factories for sync jobs.